<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_big" >

    <TextView
        android:id="@+id/MainInformerLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textColor="@color/fontBlueDefaultColor"
        android:textSize="20sp"
        android:visibility="invisible" />

    <include
        android:id="@+id/statsConatiner"
        layout="@layout/layout_crowdfunding_stats"
        android:visibility="gone" />

    <TextView
        android:id="@+id/MaiNoConnectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statsConatiner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/appName"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mainNewsNoConnection"
        android:textColor="@color/bluishGrey"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/MainFeaturedContainer"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/statsConatiner"
        android:layout_marginTop="16dp"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/MainFeaturedProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/MainFeaturedImage"
            android:layout_width="255dp"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/list_item_style"
            android:contentDescription="@string/appName"
            android:cropToPadding="true"
            android:padding="2dp"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/MainFeaturedInfo"
            android:layout_alignLeft="@+id/MainFeaturedInfo"
            android:layout_alignTop="@+id/MainFeaturedInfo"
            android:contentDescription="@string/appName"
            android:paddingLeft="1.5dp"
            android:paddingTop="1.5dp"
            android:scaleType="fitXY"
            android:src="@drawable/overlay" />

        <TextView
            android:id="@+id/MainFeaturedInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/MainFeaturedImage"
            android:layout_alignRight="@+id/MainFeaturedImage"
            android:layout_alignTop="@+id/MainFeaturedImage"
            android:contentDescription="@string/appName"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:text="@string/mainNewsFeatured"
            android:textColor="@color/bluishGrey"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/MainFeaturedText"
            android:layout_alignLeft="@+id/MainFeaturedText"
            android:layout_alignRight="@+id/MainFeaturedText"
            android:layout_alignTop="@+id/MainFeaturedText"
            android:contentDescription="@string/appName"
            android:paddingBottom="1.5dp"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:scaleType="fitXY"
            android:src="@drawable/overlay_big" />

        <TextView
            android:id="@+id/MainFeaturedText"
            style="@style/newsTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/MainFeaturedImage"
            android:layout_alignLeft="@+id/MainFeaturedImage"
            android:layout_alignRight="@+id/MainFeaturedImage"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:paddingLeft="4dp"
            android:paddingRight="2dp" />

        <ImageButton
            android:id="@+id/MainFeaturedClose"
            style="@style/newsTitleTextStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignRight="@+id/MainFeaturedImage"
            android:layout_alignTop="@+id/MainFeaturedImage"
            android:background="@drawable/transparent_button_style"
            android:contentDescription="@string/appName"
            android:scaleType="center"
            android:src="@drawable/rsi_close" />
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/MainInformerListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/MainFeaturedContainer"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:cacheColorHint="#00000000"
        android:divider="@color/transparent"
        android:dividerHeight="0dp" />

    <TextView
        android:id="@+id/newsFeedEmptySearchResult"
        style="@style/newsTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainFeaturedContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/emptyNewsSearchResult"
        android:textColor="@color/bluishGrey"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/MainInformerProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/informer_progress"
        android:minHeight="100dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/MainVerticalDivider"
        android:layout_width="0.5dp"
        android:layout_height="0.5dp"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/glowTop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/glow_top" />

</RelativeLayout>